--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <script>
         document.body.style.margin = "0%";
+        document.body.style.width = "100vw";
         //Header       
         var header = document.createElement('div');
         header.id = "header";
@@ -157,6 +158,7 @@
         edu.style.padding = "20px 50px 0px 50px";
         edu.style.background = "linear-gradient(62deg, #3a3d40 0%, #181719 100%)";
         edu.style.color = "white";
+        edu.style.overflowX = "auto";
         edu.style.fontFamily = "sans-serif";
         document.body.appendChild(edu);
         var eduHeading = document.createElement('h2');
@@ -173,7 +175,7 @@
         eduTable.style.width = "80%";
         eduTable.style.fontSize = "24px";
         eduTable.style.borderRadius = "5px 5px 5px 5px";
-        eduTable.style.overflowX = "auto";
+        
         eduTable.style.boxShadow = "0 0 20px rgba(0, 0 , 0, 0.15)";
         edu.appendChild(eduTable);
         var tHeader = document.createElement('thead');
